BusOne/src/objects/Medical_Insight_vod__c.object
<CustomObject>
    <description>Stores Key Medical Insights and relevant Insight sources</description>
    <fields>
        <fullName>Account_Plan_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Account Plan record from which the Medical Insight (aka Account Plan Note) was created.</description>
        <label>Account Plan</label>
        <referenceTo>Account_Plan_vod__c</referenceTo>
        <relationshipLabel>Account Plan Notes</relationshipLabel>
        <relationshipName>Medical_Insights</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If a Key Medical Insight pertains to an Account, maintains the reference to that Account</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Medical Insights</relationshipLabel>
        <relationshipName>Medical_Insights_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Clinical_Trial_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If a Key Medical Insight pertains to a Clinical Trial, maintains the reference to that Clinical Trial</description>
        <label>Clinical Trial</label>
        <referenceTo>Clinical_Trial__c</referenceTo>
        <relationshipLabel>Medical Insights</relationshipLabel>
        <relationshipName>Medical_Insights_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_vod__c</fullName>
        <description>The date the Key Medical Insight was discovered.</description>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description_vod__c</fullName>
        <description>Body of text describing the Key Medical Insight</description>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Entity_Reference_Id_vod__c</fullName>
        <description>Veeva internal field that ensures proper synchronization after account merges or territory realignments.</description>
        <label>Entity Reference Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interaction_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If a Key Medical Insight pertains to an Interaction, maintains the reference to that Interaction</description>
        <label>Interaction</label>
        <referenceTo>Call2_vod__c</referenceTo>
        <relationshipLabel>Medical Insights</relationshipLabel>
        <relationshipName>Medical_Insights_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Medical_Event_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If a Key Medical Insight pertains to a Medical Event, maintains the reference to that Medical Event</description>
        <label>Medical Event</label>
        <referenceTo>Medical_Event_vod__c</referenceTo>
        <relationshipLabel>Medical Insights</relationshipLabel>
        <relationshipName>Medical_Insights_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mobile_ID_vod__c</fullName>
        <description>System field to aid in synchronization and allow for the creation of Key Medical Insights on the offline platforms.</description>
        <externalId>true</externalId>
        <label>Mobile Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Other_Source_vod__c</fullName>
        <description>Stores the source of a Key Medical Insight that is external to Veeva</description>
        <label>Other Source</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Override_Lock_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to modify a submitted Key Medical Insight without the need to unlock the record.</description>
        <label>Override Lock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Publication_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If a Key Medical Insight pertains to a Publication, maintains the reference to that Publication</description>
        <label>Publication</label>
        <referenceTo>Publication__c</referenceTo>
        <relationshipLabel>Medical Insights</relationshipLabel>
        <relationshipName>Medical_Insights_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status_vod__c</fullName>
        <description>The state of the Medical Insight record. A Medical Insight record with a status of Saved may still be modified. A Medical Insight record with a status of Submitted is locked and read-only.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Saved_vod</fullName>
                </value>
                <value>
                    <fullName>Submitted_vod</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Summary_vod__c</fullName>
        <description>Summary title of the Key Medical Insight</description>
        <label>Summary</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unlock_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When editable to a user, displays an Unlock button which allows the User to unlock and edit a record with a Submitted status.</description>
        <label>Unlock</label>
        <type>Checkbox</type>
    </fields>
    <label>Medical Insight</label>
    <nameField>
        <displayFormat>KMI{000000000}</displayFormat>
        <label>Medical Insight Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Medical Insights</pluralLabel>
    <recordTypes>
        <fullName>Key_Medical_Insight_vod</fullName>
        <active>true</active>
        <description>Key Medical Insight record created by Users</description>
        <label>Key Medical Insight</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Description_Required_vod</fullName>
        <active>true</active>
        <description>A Description is required to save or submit a Key Medical Insight</description>
        <errorConditionFormula>Description_vod__c == null</errorConditionFormula>
        <errorMessage>A Description is required to save or submit a Key Medical Insight</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Summary_Required_vod</fullName>
        <active>true</active>
        <description>A Summary is required to save or submit a Key Medical Insight</description>
        <errorConditionFormula>ISBLANK(Summary_vod__c)</errorConditionFormula>
        <errorMessage>A Summary is required to save or submit a Key Medical Insight</errorMessage>
    </validationRules>
</CustomObject>